# zero2prod

./: .gitignore  Cargo.toml  flake.nix
scripts/: init_db.sh
src/: main.rs
tests/: heatlh_check.rs
