[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.8"
reqwest = "0.11.4"
serde = { version = "1.0.126", features = ["derive"] }
tokio = "1.7.1"

[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]
